Redefinition de la classe objet, et de ses classes filles pour le respect des principes solides,   ajout des types generiques, au niveau des services, creation de la classe OperationService qui va se faire implementer par toutes les autres classe d'operations.